--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -95,6 +95,9 @@ nav input[type=checkbox]:checked + ul {
     line-height: 1.5em;
     border: #3B3838 solid 1px;
     display: flexbox;
+    flex-direction: row;
+    box-sizing: border-box;
+    
 }
 
 #accueil> p,h1{
@@ -109,8 +112,15 @@ h1{
     font-size: xx-large;
 }
 
+
 #image-cover{
-    width: 100vw;
+    width: 100%;
+    height: 60%;
+    background-image:url("img/JB7A0519_s.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-position: bottom;
 
 }
 
@@ -118,8 +128,17 @@ h1{
     display: block;
 }
 
+.flex{
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 1;
+}
+
 .Amsterdam{
     width: 100%;
+    flex-basis: 100%;
+    flex-grow: 0;
+    flex-shrink: 1;
 }
 
 .sous-titre{
