--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -193,9 +193,6 @@ h1{
     display: flex;
 }
 
-#accueil .bouton .rouge{
-    transform: translateX(-150px);
-}
 
 #accueil .bouton a{
     display: flex;
@@ -210,17 +207,29 @@ h1{
 
 }
 
-.reveal{
+.reveal.rouge{
     position: relative;
-    transform: translateX(150px);
-    transition: 1s ease-in-out;
+    left: 300px;
+    transform: translateX(-300px);
+    transition: 0.5s linear;
+    transition-delay: 2s;
 }
 
-.reveal.active{
+/*
+.reveal.blanc{
+    position: relative;
+    transform: translateX(200px);
+    transition: 0.5s linear;
+}
+
+.reveal.rouge.active{
     transform: translateX(0);
 }
 
-
+.reveal.rouge.active{
+    transform: translateX(0);
+}
+*/
 
 #accueil .rouge a{
     color: whitesmoke ;
