--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -134,44 +134,53 @@ nav input[type=checkbox]:checked + ul {
     margin-top: 36px;
     height: calc(100vh - 36px);
     background-color: var(--backgroung-gris);
-    line-height: 1.5em;
+    line-height: 1.1em;
     border-top: #3B3838 solid 1px;
-    display: flexbox;
-    flex-direction: row;
-    box-sizing: border-box;  
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    justify-content: space-around;
+    border: red solid 1px;  
 }
 
 #accueil> p,h1{
-    padding: 5px 15px;
+    padding: 3px 15px;
 }
 
 h1{
     position: relative;
-    margin-top: 15px;
+    margin-top: 5px;
     font-weight: 600;
-    font-size: xx-large;
-    
+    font-size: x-large;
     animation: showBottomText 0.5s;
     animation-delay: 0.8s;
     animation-fill-mode: forwards;
     top: 0;
     transform: translate(0, -100%);
     opacity: 0;
+    border: red solid 1px;
 }
 
+
 .titre-h2{
+    position: relative;
     font-weight: 400;
     font-size: large;
     animation: showTopText 0.5s;
-    animation-delay: 1.6s;
+    animation-delay: 1.2s;
     animation-fill-mode: forwards;
     top: 0;
     transform: translate(0, -100%);
     opacity: 0;
+    border: red solid 1px;
 }
 
+p{
+    line-height: 1.2em;
+}
 
 #image-cover{
+    position: relative;
     width: 100%;
     height: 60%;
     background-image:url("img/JB7A0519_s.jpg");
@@ -179,7 +188,7 @@ h1{
     background-repeat: no-repeat;
     background-origin: border-box;
     background-position: bottom;
-    animation: opacity 0.2s;
+    animation: opacity 0.6s;
 }
 
 .bloc{
@@ -194,15 +203,17 @@ h1{
 
 
 .sous-titre{
-    margin-top: 15px;
-    font-size: larger;
-    animation: opacity 1s ease 2s forwards;
+    display: relative;
+    margin-top: 10px;
+    animation: opacity 1s ease 1.7s forwards;
     opacity: 0;
+    border: red solid 1px;
 }
 
 .sous-titre2{
-    animation: opacity 1s ease 2.4s forwards;
+    animation: opacity 1s ease 1.7s forwards;
     opacity: 0;
+    border: red solid 1px;
 }
 
 #accueil .boutons{
@@ -210,6 +221,8 @@ h1{
     margin-right: 0.7em;
     justify-content: right;
     display: flex;
+    position: relative;
+    border: red solid 1px;
 }
 
 
@@ -401,7 +414,17 @@ h3{
     color: #AB5D5D;
 }
 
-
+/* SECTION EXPERIENCE PRO */
+#experience-pro{
+    position: static;
+    display: flexbox;
+    flex-direction: row;
+    height: calc(100vh - 40px);
+    background-color: var(--font-black);
+    line-height: 1.5em;
+    border: #3B3838 solid;
+    z-index: 0;
+}
 
 
 
@@ -436,6 +459,12 @@ h3{
     50% {opacity: 0.3;}
     100% { opacity: 1; }
   }
+
+
+
+
+
+
 
 
   /* non utilisées*/
@@ -486,8 +515,25 @@ h3{
 
 /*Styles spécifiques pour les écrans de taille moyenne type tablette*/
 @media screen and (min-width: 780px) and (max-width: 979px){
+    #accueil{
+        line-height: 1.5em;
+    }
+    
     #image-cover{
         background-image:url("img/JB7A0519.jpg");    
+    }
+
+    h1{
+        font-size: xx-large;
+    }
+
+    .sous-titre{
+        font-size: larger;
+        margin-top: 15px;
+    }
+
+    #accueil> p,h1{
+        padding: 5px 15px;
     }
 }
 
