--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -290,20 +290,21 @@ section h2{
     color: var(--brique);
     font-weight: 600;
     text-transform: uppercase;
-    border-bottom:#AB5D5D solid 5px;
+    /*border-bottom:#AB5D5D solid 5px;*/
     padding: 10px;
 }
 
  .decalage{
-    width: 12%;
+    width: 100%;
     height: 5px;
     margin-top: -5px;
     position: static;
+    background-color: var(--brique);
 }
 
-.gris{
+/*.gris{
     background-color: var(--backgroung-gris);
-}
+}*/
 
 .main-text{
     position: relative;
@@ -444,8 +445,6 @@ h3{
 .item-cursus > h4{
     color: #AB5D5D;
 }
-
-
 
 
 
