--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -21,6 +21,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    max-width: 100vw;
 }
 
 html{
@@ -295,7 +296,7 @@ section h2{
 }
 
  .decalage{
-    width: 100%;
+    width: 50%;
     height: 5px;
     margin-top: -5px;
     position: static;
@@ -309,7 +310,7 @@ section h2{
 .main-text{
     position: relative;
     justify-self: space-around;
-    margin: 0px 20px;
+    margin: 20px 20px;
     flex-basis: 85%;
     flex-shrink: 1;
     flex-grow: 0;
@@ -331,8 +332,10 @@ section h2{
 }
 
 
-
+/***********************/
 /* SECTION COMPETENCES */
+/***********************/
+
 #competences{
     position: relative;
     display: flex;
@@ -409,10 +412,9 @@ h3{
 }
 
 
-/********************/
+/******************/
 /* SECTION CURSUS */
-/********************/
-
+/******************/
 #cursus{
     position: relative;
     display: flex;
@@ -449,18 +451,38 @@ h3{
 
 
 
-
+/**************************/
 /* SECTION EXPERIENCE PRO */
+/**************************/
 #experience-pro{
     position: relative;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 38px);
+    height: calc(2*(100vh - 38px));
     background-color: var(--font-black);
     line-height: 1.5em;
     border: #3B3838 solid;
     z-index: 0;
 }
+
+.item-experience{
+    width: 85%;
+    border-radius: 10px;
+    box-shadow: 0 25px 35px rgba(0,0,0,0.1);
+    color: #D0CECE;
+    border: solid 1px rgba(160, 160, 160, 0.568);
+    padding: 10px;
+    align-items:initial;
+    margin-bottom: 20px;
+    font-size: smaller;
+    line-height: 1.5em;
+}
+
+
+
+
+
+
 
 
 
