--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -225,7 +225,7 @@ p{
     position: relative;
     margin-bottom: 3px;
     opacity: 0;
-    animation: opacity 1.2s linear 1.9s forwards;
+    animation: opacity 1.2s linear 3.5s forwards;
 }
 
 
@@ -280,14 +280,12 @@ p{
 .titre{
     position: relative; /* absolute*/
     top:0;
-    border: red solid 1px;
-    margin: 20px 10px;
+    margin: 20px 10px 15px;
     width: 85%;
     display: block;
 }
 
 section h2{
-    border: red solid 1px;
     color: var(--brique);
     font-weight: 600;
     text-transform: uppercase;
@@ -299,19 +297,18 @@ section h2{
     width: 50%;
     height: 5px;
     margin-top: -5px;
+    margin-left: 10px;
     position: static;
     background-color: var(--brique);
 }
 
-/*.gris{
-    background-color: var(--backgroung-gris);
-}*/
+
 
 .main-text{
     position: relative;
     justify-self: space-around;
-    margin: 20px 20px;
-    flex-basis: 85%;
+    margin: 0px 20px 20px 20px;
+    flex-basis: 90%;
     flex-shrink: 1;
     flex-grow: 0;
     font-size: calc(0.75rem + 0.7vw);
@@ -319,7 +316,6 @@ section h2{
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    border: blue solid 1px;
     line-height: calc(0.7rem + 1.3vh);
 }
 
@@ -328,7 +324,6 @@ section h2{
     flex-grow: 1;
     line-height: calc(0.7rem + 1.3vh);
     position: relative;
-    border: red solid 1px;
 }
 
 
@@ -420,8 +415,23 @@ h3{
     display: flex;
     flex-direction: column;
     height: calc(2*(100vh - 38px));
-    background-color: var(--backgroung-gris);
+
+    /*background: linear-gradient(55deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 85%);*/
+    background: var(--brique);
+    background: -webkit-linear-gradient(top left, var(--brique), #1B0DD2);
+    background: -moz-linear-gradient(top left, var(--brique), #1B0DD2);
+    background: linear-gradient(to bottom right, var(--brique), #1B0DD2);
+    /*background-color: var(--backgroung-gris);*/
     line-height: 1.5em;
+}
+
+
+#cursus h2{
+    color: #D0CECE;
+}
+
+#cursus .gris{
+    background-color: #D0CECE;
 }
 
 
@@ -436,12 +446,13 @@ h3{
     width: 85%;
     border-radius: 10px;
     box-shadow: 0 25px 35px rgba(0,0,0,0.1);
+    background-color: #D0CECE;
     border: solid 1px rgba(160, 160, 160, 0.568);
     padding: 10px;
     align-items:initial;
     margin-bottom: 20px;
     font-size: smaller;
-    line-height: 1.5em;
+    line-height: calc(0.7rem + 1.3vh)
 }
 
 .item-cursus > h4{
@@ -499,6 +510,20 @@ h3{
     transform: translateY(0);
     opacity: 1;
 }
+
+
+.appear{
+    opacity: 0;
+    transition: 1s all ease;
+}
+
+.appear.active{
+    opacity: 1;
+}
+
+
+
+
 
 @keyframes showBottomText {
     0% { transform: translate3d(0, -100%, 0); }
