--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -269,7 +269,6 @@ p{
     min-height: 500px;
     background-color: var(--backgroung-gris);
     line-height: 1.5rem;
-    border: #3B3838 solid 2px;
 }
 
 .repère{
@@ -353,33 +352,61 @@ section h2{
 }
 
 
+
 .bloc-compétence{
     display: flex;
     flex-direction: column;
-    border: yellow 1px solid;
     justify-content: space-around;
 }
+
+.bloc-compétence i{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
+    width: 5vh;
+    height: 5vh;
+    border: var(--backgroung-gris) solid 2px;
+    color: var(--font-black);
+    border-radius: 50%;
+    box-shadow: 0 0 26 rgba(0,0,0,0.1);
+    background-color: var(--backgroung-gris);
+    font-size: 1.4rem
+}
+
+
 
 h3{
     display: block;
     width: 100%;
-    padding: 0.5rem;
-    border: orange solid 1px;
+    padding: 0.8rem;
     text-align: center;
 }
 
 
 .bloc-compétences{
-    display: block;
+    padding: 0.4rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
-    border: red solid 1px;
+}
+
+.bloc-compétences ul{
+    flex-basis: 60%;
+}
+
+.bloc-compétences ul li{
+    list-style:disc;
+    list-style-position: inside;
 }
 
 #competences h4{
     color:var(--brique);
-    text-align: center;
-    display: block;
+    text-align: left;
+    flex-basis: 40%;
     width: 100%;
+    font-size: larger;
 }
 
 
@@ -401,7 +428,6 @@ h3{
 }
 
 .bloc-langue{
-    display: block;
     width: 100%;
     text-align: center;
 }
@@ -415,19 +441,35 @@ h3{
     display: flex;
     flex-direction: column;
     height: calc(2*(100vh - 38px));
+   
+    background-image: url("/img/17564656_SL_042620_30310_19.jpg");
+    background-size: cover;
+    background-position: center;
+    
+    /* background: rgb(193,193,193);
+    background: linear-gradient(180deg, rgba(193,193,193,1) 0%, rgba(212,206,206,1) 37%, rgba(249,249,249,1) 100%);  */
+
+    /* background: rgb(57,52,52);
+    background: linear-gradient(180deg, rgba(57,52,52,1) 0%, rgba(121,9,68,1) 58%, rgba(171,93,93,1) 100%);  */
+
+    /* background: #DD6A6A;
+    background: -webkit-linear-gradient(bottom left, #DD6A6A, #2D2C3F);
+    background: -moz-linear-gradient(bottom left, #DD6A6A, #2D2C3F);
+    background: linear-gradient(to top right, #DD6A6A, #2D2C3F); */
 
     /*background: linear-gradient(55deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 85%);*/
-    background: var(--brique);
+    /* background: var(--brique);
     background: -webkit-linear-gradient(top left, var(--brique), #1B0DD2);
     background: -moz-linear-gradient(top left, var(--brique), #1B0DD2);
-    background: linear-gradient(to bottom right, var(--brique), #1B0DD2);
+    background: linear-gradient(to bottom right, var(--brique), #1B0DD2); */
+   
     /*background-color: var(--backgroung-gris);*/
     line-height: 1.5em;
 }
 
 
 #cursus h2{
-    color: #D0CECE;
+    color: var();
 }
 
 #cursus .gris{
@@ -445,8 +487,8 @@ h3{
 .item-cursus{
     width: 85%;
     border-radius: 10px;
-    box-shadow: 0 25px 35px rgba(0,0,0,0.1);
-    background-color: #D0CECE;
+    box-shadow: 0 17px 20px rgba(147, 61, 61, 0.53);
+    background-color: whitesmoke;
     border: solid 1px rgba(160, 160, 160, 0.568);
     padding: 10px;
     align-items:initial;
@@ -480,16 +522,26 @@ h3{
     width: 85%;
     border-radius: 10px;
     box-shadow: 0 25px 35px rgba(0,0,0,0.1);
-    color: #D0CECE;
+    color: var(--font-black);
     border: solid 1px rgba(160, 160, 160, 0.568);
     padding: 10px;
-    align-items:initial;
     margin-bottom: 20px;
     font-size: smaller;
     line-height: 1.5em;
+    background-color: whitesmoke;
 }
 
+.logo{
+    display: flex;
+    position: relative;
+    align-content: space-between;
+    align-self: right;
+    justify-self: right;
+    border: red solid 1px;
+    text-align: right;
 
+
+}
 
 
 
