--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -57,6 +57,7 @@ nav{
     top: 0px;
     transition: 0,5s;
     z-index: 1;
+    border-bottom: grey solid 1px;
 }
 
 #photo-profile{
@@ -137,7 +138,6 @@ nav input[type=checkbox]:checked + ul {
     height: calc(100vh - 36px);
     background-color: var(--backgroung-gris);
     line-height: 1.1rem;
-    border-top: #3B3838 solid 1px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -224,8 +224,8 @@ p{
     display: flex;
     position: relative;
     margin-bottom: 3px;
-    opacity: 0;
-    animation: opacity 1.2s linear 3.5s forwards;
+
+    
 }
 
 
@@ -239,6 +239,8 @@ p{
     width: 100px;
     padding: calc(4px + 0.6vh) 10px; /* 7px c'est pas mal */ 
     border-radius: 10px;
+    animation: pop 0.5s linear 3.5s forwards;
+    opacity: 0;
 }
 
 
@@ -334,10 +336,9 @@ section h2{
     position: relative;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 38px);
+    height: calc(1.3*(100vh - 38px));
     min-height: 500px;
     background-color: var(--font-black);
-    line-height: 1.5em;
     border: #3B3838 solid;
     z-index: 0;
     box-sizing: border-box;
@@ -356,7 +357,7 @@ section h2{
 .bloc-compétence{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .bloc-compétence i{
@@ -371,7 +372,9 @@ section h2{
     border-radius: 50%;
     box-shadow: 0 0 26 rgba(0,0,0,0.1);
     background-color: var(--backgroung-gris);
-    font-size: 1.4rem
+    font-size: 1.4rem;
+    padding: 1.5rem;
+    margin: 2%;
 }
 
 
@@ -381,6 +384,7 @@ h3{
     width: 100%;
     padding: 0.8rem;
     text-align: center;
+    border:  red solid 1px;
 }
 
 
@@ -388,8 +392,9 @@ h3{
     padding: 0.4rem;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: top;
     width: 100%;
+    font-size: calc(0.8rem + 20%);
 }
 
 .bloc-compétences ul{
@@ -399,14 +404,16 @@ h3{
 .bloc-compétences ul li{
     list-style:disc;
     list-style-position: inside;
+    line-height: calc(0.7rem + 1.3vh);
+    font-size: calc(0.8rem + 0.2vh);
 }
 
 #competences h4{
     color:var(--brique);
     text-align: left;
+    padding-bottom: 0.4rem;
     flex-basis: 40%;
     width: 100%;
-    font-size: larger;
 }
 
 
@@ -422,6 +429,9 @@ h3{
     text-align: center;
 }
 
+.langue p{
+    padding: 0.3rem;
+}
 
 .main-text li{
     list-style: none;
@@ -430,6 +440,7 @@ h3{
 .bloc-langue{
     width: 100%;
     text-align: center;
+    border:  red solid 1px;
 }
 
 
@@ -440,37 +451,13 @@ h3{
     position: relative;
     display: flex;
     flex-direction: column;
-    height: calc(2*(100vh - 38px));
-   
-    background-image: url("/img/17564656_SL_042620_30310_19.jpg");
+    /* height: calc(2*(100vh - 38px)); */
+    background-image: url("/img/white-paper-texture-background.jpg"); /* Image de Vectonauta sur Freepik" */
     background-size: cover;
-    background-position: center;
-    
-    /* background: rgb(193,193,193);
-    background: linear-gradient(180deg, rgba(193,193,193,1) 0%, rgba(212,206,206,1) 37%, rgba(249,249,249,1) 100%);  */
-
-    /* background: rgb(57,52,52);
-    background: linear-gradient(180deg, rgba(57,52,52,1) 0%, rgba(121,9,68,1) 58%, rgba(171,93,93,1) 100%);  */
-
-    /* background: #DD6A6A;
-    background: -webkit-linear-gradient(bottom left, #DD6A6A, #2D2C3F);
-    background: -moz-linear-gradient(bottom left, #DD6A6A, #2D2C3F);
-    background: linear-gradient(to top right, #DD6A6A, #2D2C3F); */
-
-    /*background: linear-gradient(55deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 85%);*/
-    /* background: var(--brique);
-    background: -webkit-linear-gradient(top left, var(--brique), #1B0DD2);
-    background: -moz-linear-gradient(top left, var(--brique), #1B0DD2);
-    background: linear-gradient(to bottom right, var(--brique), #1B0DD2); */
-   
-    /*background-color: var(--backgroung-gris);*/
+    background-position: right;
     line-height: 1.5em;
 }
 
-
-#cursus h2{
-    color: var();
-}
 
 #cursus .gris{
     background-color: #D0CECE;
@@ -487,22 +474,34 @@ h3{
 .item-cursus{
     width: 85%;
     border-radius: 10px;
-    box-shadow: 0 17px 20px rgba(147, 61, 61, 0.53);
+    box-shadow: 0 17px 20px rgba(0,0,0, 0.55);
     background-color: whitesmoke;
     border: solid 1px rgba(160, 160, 160, 0.568);
     padding: 10px;
     align-items:initial;
-    margin-bottom: 20px;
+    margin: 20px 0;
     font-size: smaller;
-    line-height: calc(0.7rem + 1.3vh)
+    line-height: calc(0.7rem + 1.3vh);
+}
+
+
+#cursus h3{
+    font-size: 1rem;
 }
 
 .item-cursus > h4{
     color: #AB5D5D;
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
 }
 
+#cursus i{
+    padding-right: 1rem;
+}
 
-
+.item-cursus p{
+    line-height: calc(0.45rem + 1.3vh);
+}
 
 /**************************/
 /* SECTION EXPERIENCE PRO */
@@ -535,18 +534,96 @@ h3{
     display: flex;
     position: relative;
     align-content: space-between;
-    align-self: right;
-    justify-self: right;
+    align-items: center;
     border: red solid 1px;
-    text-align: right;
+}
 
+.logo img{
+    display: flex;
+    justify-content: center;
+    max-width: 30%;
+    height:30%;
+    width: auto;
+}
+
+.entreprise{
+    font-size: 1rem;
+    padding: 0.05rem 0 0.6rem;
+    font-weight: 500;
+    color: rgb(7, 7, 106);
+}
+
+.item-experience li{
+    list-style: disc inside;
+    line-height: 1rem;
+    padding-bottom: 0.4rem;
+}
+
+/*****************************/
+/********** CONTACT *********/
+/****************************/
+
+#contact{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: calc(100vh - 36px);
+    min-height: 500px;
+    background-color: var(--backgroung-gris);
+    line-height: 1.5rem;
 
 }
 
+.item-contact{
+    width: 80%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 20%;
+    margin: 5%;
+    align-items: center;
+    justify-content: center;
+    border: red 1px solid;
+    text-align: center;
+    font-size: calc(15px + 0.390625vw);
 
+}
 
+.background-green{
+    background-color: #dff7e9;
+    color:#2ECC71;
+}
 
+.background-purple{
+    background-color: #EFE5F3;
+    color:#9B59B6 ;
+}
 
+.background-blue{
+    background-color:#E0EFF9 ;
+    color: #3498DB;
+}
+
+#contact i{
+    font-size:calc(1.5rem + 1.3vh);
+    display: flex;
+    border: red 1px solid;
+    padding: 1rem;
+
+}
+
+#contact .item-contact p{
+    display: flex;
+    border: red 1px solid;
+    height: fit-content;
+    flex-grow: 0;
+
+}
+
+.bold{
+    font-weight: bold;
+}
 
 
 /*Section animation*/
@@ -596,7 +673,11 @@ h3{
   }
 
 
-
+  @keyframes pop {
+    0% { opacity: 0; }
+    50% {opacity: 0.5; transform: scale(1.15,1.15);}
+    100% { opacity: 1; }
+  }
 
 
 
