--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -336,8 +336,8 @@ section h2{
     position: relative;
     display: flex;
     flex-direction: column;
-    height: calc(1.3*(100vh - 38px));
-    min-height: 500px;
+    /* height: calc(1.3*(100vh - 38px)); */
+    min-height: 100vh;
     background-color: var(--font-black);
     border: #3B3838 solid;
     z-index: 0;
@@ -384,7 +384,6 @@ h3{
     width: 100%;
     padding: 0.8rem;
     text-align: center;
-    border:  red solid 1px;
 }
 
 
@@ -440,7 +439,6 @@ h3{
 .bloc-langue{
     width: 100%;
     text-align: center;
-    border:  red solid 1px;
 }
 
 
@@ -510,11 +508,10 @@ h3{
     position: relative;
     display: flex;
     flex-direction: column;
-    height: calc(2*(100vh - 38px));
+    /* height: calc(2*(100vh - 38px)); */
     background-color: var(--font-black);
     line-height: 1.5em;
     border: #3B3838 solid;
-    z-index: 0;
 }
 
 .item-experience{
@@ -535,7 +532,6 @@ h3{
     position: relative;
     align-content: space-between;
     align-items: center;
-    border: red solid 1px;
 }
 
 .logo img{
@@ -569,7 +565,6 @@ h3{
     flex-direction: column;
     justify-content: center;
     height: calc(100vh - 36px);
-    min-height: 500px;
     background-color: var(--backgroung-gris);
     line-height: 1.5rem;
 
@@ -584,7 +579,6 @@ h3{
     margin: 5%;
     align-items: center;
     justify-content: center;
-    border: red 1px solid;
     text-align: center;
     font-size: calc(15px + 0.390625vw);
 
@@ -608,14 +602,12 @@ h3{
 #contact i{
     font-size:calc(1.5rem + 1.3vh);
     display: flex;
-    border: red 1px solid;
     padding: 1rem;
 
 }
 
 #contact .item-contact p{
     display: flex;
-    border: red 1px solid;
     height: fit-content;
     flex-grow: 0;
 
