--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -41,6 +41,9 @@ em{
     font-style: normal;
 }
 
+.hide-mobile{
+    display: none;
+}
 
 /**********************/
 /* SECTION NAVIGATION */
@@ -224,9 +227,7 @@ p{
     justify-content: right;
     display: flex;
     position: relative;
-    margin-bottom: 3px;
-
-    
+    margin-bottom: 3px;   
 }
 
 
@@ -242,7 +243,6 @@ p{
     border-radius: 10px;
     animation: pop 0.5s linear 3.5s forwards;
     opacity: 0;
-
 }
 
 
@@ -306,7 +306,6 @@ section h2{
 }
 
 
-
 .main-text{
     position: relative;
     justify-self: space-around;
@@ -339,9 +338,8 @@ section h2{
     display: flex;
     flex-direction: column;
     /* height: calc(1.3*(100vh - 38px)); */
-    min-height: 100vh;
+    min-height: calc(100vh - 38px);
     background-color: var(--font-black);
-    border: #3B3838 solid;
     z-index: 0;
     box-sizing: border-box;
 }
@@ -676,7 +674,7 @@ h3{
 
 .appear{
     opacity: 0;
-    transition: 1s all ease;
+    transition: 1.5s all ease;
 }
 
 .appear.active{
@@ -747,7 +745,6 @@ h3{
 @media screen and (min-width: 700px) and (max-width: 979px){
     
     /****** SECTION NAVIGATION ******/
-
     nav{
         height: 36px;
         align-items: center;
@@ -760,7 +757,6 @@ h3{
     #burger-menu{
         font-size: 0.88rem;
         padding-right: 0.5rem;
-
     }
     
     nav label{
@@ -821,8 +817,8 @@ h3{
     color: var(--brique);
     }
 
-    /****** SECTION ACCUEIL ******/
 
+    /****** SECTION ACCUEIL ******/
     #accueil{
         line-height: 1.5em;
         justify-content:space-around;
@@ -845,7 +841,6 @@ h3{
         padding: 5px 20px;
     }
 
-
     /* #accueil .boutons{
         justify-content: right;
         display: flex;
@@ -853,7 +848,6 @@ h3{
         margin-bottom: 3px;
 
     }
-    
     
     #accueil .bouton a{
         display: flex;
@@ -869,7 +863,6 @@ h3{
         opacity: 0;
     } */
 
-
     #accueil .bouton a:hover{
         transition: 0.5s;
         letter-spacing: 2px;
@@ -877,43 +870,140 @@ h3{
     
 
     /****** SECTION PARCOURS ******/
-    
     .titre{
         margin: 20px 20px 15px;
     }
 
-
     .main-text{
-        position: relative;
-        justify-self: space-around;
         margin: 20px 60px 40px;
         flex-basis: 80%;
-        flex-shrink: 1;
-        flex-grow: 0;
-        /* font-size: calc(0.75rem + 0.7vw); */
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: left;
-        line-height: calc(0.7rem + 1.3vh);
         border: red 1px solid;
     }
     
-    .main-text p{
+    #parcours .main-text p{
         margin-top: 10px;
         padding: 0 20px;
         display: block;
-        flex-grow: 1;
-        line-height: calc(0.7rem + 1.3vh);
-        font-size: 1rem;
-        position: relative;
+        font-size: 0.9rem;
+    }
+
+    .hide-mobile{
+        display : inline-block;
+        float: right;
+        font-size: 2.5rem;
+        color: var(--backgroung-gris);
+        margin: 5px 0 10px 40px;
+        padding: 1rem;
+        border-radius: 50%;
+    }
+
+    .bckg-grey{
+        background-color: rgb(81, 81, 81);
+    }
+
+    .bckg-brique{
+        background-color: var(--brique)
     }
 
 
+    /****** SECTION COMPETENCES ******/
+    
+    /*zone de travail */
+    #competences{
+        min-height: calc(100vh - 30px);
+    }
+    
+    .bloc-compétence{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    
+    .bloc-compétence i{
+        display : flex;
+        text-align: center;
+        justify-content: center;
+        width: 5vh;
+        height: 5vh;
+        border: var(--backgroung-gris) solid 2px;
+        color: var(--font-black);
+        border-radius: 50%;
+        box-shadow: 0 0 26 rgba(0,0,0,0.1);
+        background-color: var(--backgroung-gris);
+        font-size: 1.4rem;
+        padding: 1.5rem;
+        margin: 2%;
+        float: left
+    }
 
 
+    h3{
+        display: block;
+        padding: 0.8rem;
+        width: 100%;
+        text-align: center;
+    }
+    
+    
+    .bloc-compétences{
+        padding: 0.4rem;
+        display: flex;
+        flex-direction: row;
+        align-items: top;
+        width: 100%;
+        font-size: calc(0.8rem + 20%);
+    }
+    
+    .bloc-compétences ul{
+        flex-basis: 70%;
+    }
+    
+    .bloc-compétences ul li{
+        list-style:disc;
+        list-style-position: inside;
+        line-height: calc(0.7rem + 1.3vh);
+        font-size: calc(0.8rem + 0.2vh);
+    }
 
 
+    
+    #competences h4{
+        color:var(--brique);
+        text-align: left;
+        padding-bottom: 0.4rem;
+        flex-basis: 30%;
+        width: 100%;
+        font-size: calc(0.9rem + 0.2vh);
+    }
+    
+    
+    
+    .langues-parlées{
+        display: flex;
+        flex: row;
+        width: 100%;
+        justify-content: space-around;
+    }
+    
+    .langue{
+        text-align: center;
+    }
+    
+    .langue p{
+        padding: 0.3rem;
+    }
+    
+    .main-text li{
+        list-style: none;
+    }
+    
+    .bloc-langue{
+        width: 100%;
+        text-align: center;
+    }
+
+    /*fin zone de travail */
 
 }
 
