--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -6,6 +6,7 @@
 --contour-gris: #D0CECE;
 --brique: #AB5D5D;
 --font-black: #3B3838;
+--vert-eau: #17c5b7;
 }
 
 .material-symbols-outlined {
@@ -352,13 +353,19 @@ section h2{
     color: #F0F0F0;
 }
 
-
+.encapsule-titre-icone{
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
 
 .bloc-compétence{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
+
 
 .bloc-compétence i{
     display: flex;
@@ -374,7 +381,6 @@ section h2{
     background-color: var(--backgroung-gris);
     font-size: 1.4rem;
     padding: 1.5rem;
-    margin: 2%;
 }
 
 
@@ -659,7 +665,7 @@ h3{
     position: relative;
     transform: translateY(150px);
     opacity: 0;
-    transition: 1s all ease;
+    transition: 1s ease;
 }
   
 .reveal.active{
@@ -841,28 +847,6 @@ h3{
         padding: 5px 20px;
     }
 
-    /* #accueil .boutons{
-        justify-content: right;
-        display: flex;
-        position: relative;
-        margin-bottom: 3px;
-
-    }
-    
-    #accueil .bouton a{
-        display: flex;
-        margin-right: 0.8rem;
-        text-transform: uppercase;
-        text-decoration: none;
-        justify-content: center;
-        text-align: center;
-        width: 100px;
-        padding: calc(4px + 0.6vh) 65px;
-        border-radius: 10px;
-        animation: pop 0.5s linear 3.5s forwards;
-        opacity: 0;
-    } */
-
     #accueil .bouton a:hover{
         transition: 0.5s;
         letter-spacing: 2px;
@@ -877,7 +861,7 @@ h3{
     .main-text{
         margin: 20px 60px 40px;
         flex-basis: 80%;
-        border: red 1px solid;
+        flex-grow: 1;
     }
     
     #parcours .main-text p{
@@ -907,103 +891,169 @@ h3{
 
 
     /****** SECTION COMPETENCES ******/
-    
-    /*zone de travail */
     #competences{
         min-height: calc(100vh - 30px);
     }
-    
-    .bloc-compétence{
+
+    .encapsule-titre-icone{
         display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-    
-    .bloc-compétence i{
-        display : flex;
-        text-align: center;
+        justify-items: center;
+        flex-direction: row;
         justify-content: center;
-        width: 5vh;
-        height: 5vh;
-        border: var(--backgroung-gris) solid 2px;
-        color: var(--font-black);
-        border-radius: 50%;
-        box-shadow: 0 0 26 rgba(0,0,0,0.1);
-        background-color: var(--backgroung-gris);
-        font-size: 1.4rem;
-        padding: 1.5rem;
-        margin: 2%;
-        float: left
     }
 
+    .bloc-compétence{
+        flex-basis: 75%;
+    }
+
+    .bloc-compétence i{
+        padding-left: 1.5rem;
+        float: left;
+        margin: 1rem 0.5rem;
+    }
 
     h3{
-        display: block;
-        padding: 0.8rem;
+        padding: 1rem 0.2rem;
         width: 100%;
-        text-align: center;
-    }
-    
-    
-    .bloc-compétences{
-        padding: 0.4rem;
-        display: flex;
-        flex-direction: row;
-        align-items: top;
-        width: 100%;
-        font-size: calc(0.8rem + 20%);
+        justify-content: center;
+        margin: 1rem 0;
     }
     
     .bloc-compétences ul{
         flex-basis: 70%;
     }
     
-    .bloc-compétences ul li{
-        list-style:disc;
-        list-style-position: inside;
-        line-height: calc(0.7rem + 1.3vh);
-        font-size: calc(0.8rem + 0.2vh);
-    }
-
-
-    
     #competences h4{
-        color:var(--brique);
-        text-align: left;
-        padding-bottom: 0.4rem;
         flex-basis: 30%;
-        width: 100%;
-        font-size: calc(0.9rem + 0.2vh);
-    }
-    
-    
-    
-    .langues-parlées{
-        display: flex;
-        flex: row;
-        width: 100%;
-        justify-content: space-around;
-    }
-    
-    .langue{
-        text-align: center;
-    }
-    
-    .langue p{
-        padding: 0.3rem;
-    }
-    
-    .main-text li{
-        list-style: none;
     }
     
     .bloc-langue{
-        width: 100%;
-        text-align: center;
+        flex-direction: row;
     }
 
-    /*fin zone de travail */
+
+    /****** SECTION CURSUS ******/
+    /* Zone de travail */
+
+    #cursus{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        /* height: calc(2*(100vh - 38px)); */
+        background-image: url("/img/white-paper-texture-background.jpg"); /* Image de Vectonauta sur Freepik" */
+        background-size: cover;
+        background-position: right;
+        line-height: 1.5em;
+    }
+    
+    
+    #cursus .gris{
+        background-color: #D0CECE;
+    }
+    
+    
+    #cursus > .main-text{
+        justify-content: space-between;
+        height: 90%;
+        padding-top: 10px;
+        align-items: flex-start;
+    }
+    
+    .item-cursus{
+        width: 70%;
+        border-radius: 10px;
+        box-shadow: 0 17px 20px rgba(0,0,0, 0.55);
+        background-color: whitesmoke;
+        border: solid 1px rgba(160, 160, 160, 0.568);
+        padding: 10px;
+        align-items:initial;
+        margin: 20px 30px;
+        font-size: smaller;
+        line-height: calc(0.7rem + 1.3vh);
+        transition: border-top-left-radius,border-bottom-left-radius, border-left, box-shadow 0.2s; 
+        transition: transform 1s, position 1s, opacity 1s;
+        /* transition: left 0.41s; */
+    }
+    
+    
+    #cursus h3{
+        font-size: 1rem;
+    }
+    
+    .item-cursus > h4{
+        color: #AB5D5D;
+        font-size: 0.9rem;
+        padding-bottom: 0.5rem;
+    }
+    
+    #cursus i{
+        padding-right: 1rem;
+    }
+    
+    .item-cursus p{
+        line-height: calc(0.45rem + 1.3vh);
+    }
+
+
+    
+    /* The actual timeline (the vertical ruler) */
+    #cursus .main-text::before {
+        content: '';
+        position: absolute;
+        width: 7px;
+        background-color: var(--font-black);
+        top: 0;
+        bottom: 0;
+        left: 75vw;
+        margin: 0;
+        padding: 0;
+    }
+
+
+    .item-cursus:before{
+        content:'';
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        background-color: var(--backgroung-gris);
+        border: var(--font-black) 8px solid;
+        top: 40%;
+        left: calc(75vw - 41px);
+        margin: 0;
+        padding: 0;
+        transition: none;
+    }
+
+
+    .item-cursus:hover{
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        transition: 0.2s linear;
+        border-left: 8px solid rgb(23, 197, 183);
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+
+    .item-cursus:hover h3{
+        color:rgb(23, 197, 183);
+        transition: 0.2s;
+    }
+
+    .item-cursus:hover::before{
+        left: calc(75vw - 48px); 
+        transform: scale(1.3,1.3);
+        transition: 0.28s;       
+    }
+
+    /* fin de zone*/
+
+
+
+
+
+
+
+
 
 }
 
