--- a/SIte CV Natacha.css
+++ b/SIte CV Natacha.css
@@ -125,7 +125,6 @@ nav input[type=checkbox]{
     position: relative;
     justify-content: right;
     place-self: right;
-
 }
 
 
@@ -366,6 +365,7 @@ section h2{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    width: 100%;
 }
 
 
@@ -390,7 +390,7 @@ section h2{
 h3{
     display: block;
     width: 100%;
-    padding: 0.8rem;
+    padding: 0.5rem;
     text-align: center;
 }
 
@@ -424,7 +424,23 @@ h3{
     font-size: calc(0.9rem + 0.2vh);
 }
 
+.environnement-div .list-environnement-travail{
+    flex-basis: 100%;
+    text-align: center;
+    padding-bottom: 0.3rem;
+}
 
+.environnement-div .list-environnement-travail h4{
+    display: inline;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+}
+
+.list-environnement-travail li{
+    list-style: none;
+    display: inline;
+   
+}
 
 .langues-parlées{
     display: flex;
@@ -577,7 +593,6 @@ h3{
     background-color: var(--backgroung-gris);
     line-height: 1.5rem;
     box-sizing: border-box;
-    border: red 1px solid;
     overflow: hidden;
 
 }
@@ -597,7 +612,6 @@ h3{
     box-sizing: border-box;
     margin-bottom: 15px;
     background-color: inherit;
-    border: yellow 1px solid;
 }
 
 #contact .main-text p{
@@ -867,21 +881,38 @@ h3{
     }
 
     h1{
-        font-size: xx-large;
+        font-size: 2rem;
+    }
+
+    .titre-h2{
+        font-size: 1.2rem;
+    }
+    
+    p{
+        line-height: 1.2em;
+        font-size: 1rem;
     }
 
     .sous-titre{
-        font-size: larger;
-        margin-top: 15px;
+        font-size: 1.2rem;
+        margin-top: 2px;
+        line-height: 1.5rem;
     }
+
+    #accueil .boutons{
+        margin-bottom: 4.2vh;
+        margin-top: 1.7vh;   
+    }
+
+
 
     #accueil> p,h1{
         padding: 5px 20px;
     }
 
     #accueil .bouton a:hover{
-        transition: 0.5s;
-        letter-spacing: 2px;
+        transition: 0.7s ease;
+        transform: scale(1.1,1.1);
     }
     
 
@@ -941,20 +972,32 @@ h3{
     .bloc-compétence i{
         padding-left: 1.5rem;
         float: left;
-        margin: 1rem 0.5rem;
+    }
+
+    .fa-code{
+        margin-bottom: 0.7rem;
     }
 
     h3{
-        padding: 1rem 0.2rem;
+        padding: 0.9rem 0.2rem;
         width: 100%;
         justify-content: center;
-        margin: 1rem 0;
+        margin: 0;
     }
     
+    #competences .environnement-div{
+        padding: 0;
+    }
+
     .bloc-compétences ul{
         flex-basis: 70%;
     }
     
+    .bloc-compétences p{
+        line-height: calc(0.7rem + 1.3vh);
+        font-size: calc(0.8rem + 0.2vh);
+    }
+
     #competences h4{
         flex-basis: 30%;
     }
@@ -962,6 +1005,7 @@ h3{
     .bloc-langue{
         flex-direction: row;
     }
+
 
 
     /****** SECTION CURSUS ******/
@@ -1029,7 +1073,7 @@ h3{
     }
 
     #experience-pro > .main-text{
-        width: 70%;
+        width: 62%;
     }
 
     .item-experience{
